--- a/templates/receipt/add.html.twig
+++ b/templates/receipt/add.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ReceiptController!{% endblock %}
+{% block title %}Hello Receipt!{% endblock %}
 
 {% block body %}
     <style>
