--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,5 +10,6 @@
     </head>
     <body>
         {% block body %}{% endblock %}
+        {% block javascripts_footer %}{% endblock %}
     </body>
 </html>
